--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
 
 main {
   background-color: #F5F5F5;
-  height: 400px;
+  height: 600px;
   max-width: 800px;
   border-radius: 5px;
   display: flex;
@@ -19,7 +19,7 @@ main {
   justify-content: center;
   align-items: center;
   margin: auto;
-  padding: 5%;
+  padding: 7%;
 }
 
 .title {
@@ -34,6 +34,10 @@ main {
   margin-top: 0;
   text-align: center;
   margin-bottom: 20px;
+}
+
+.count--text {
+  margin-top: 0;
 }
 
 .dice--container {
